app/environments/dev/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: demo-service
  namespace: transcriber
spec:
  selector:
    app: demo
  ports:
    - port: 80
      targetPort: 80
  type: ClusterIP
